--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,15 @@
             class="form-control"
             formControlName="username"
           />
+          <span
+            class="help-block"
+            *ngIf="
+              !signupForm.get('username').valid &&
+              signupForm.get('username').touched
+            "
+          >
+            Please entre a valid username!
+          </span>
         </div>
         <div class="form-group">
           <label for="email">email</label>
@@ -19,6 +28,14 @@
             class="form-control"
             formControlName="email"
           />
+          <span
+            class="help-block"
+            *ngIf="
+              !signupForm.get('email').valid && signupForm.get('email').touched
+            "
+          >
+            Please entre a valid email!
+          </span>
         </div>
         <div class="radio" *ngFor="let gender of genders">
           <label>
@@ -27,6 +44,12 @@
             }}
           </label>
         </div>
+        <span
+          class="help-block"
+          *ngIf="!signupForm.valid && signupForm.touched"
+        >
+          Please entre a valid data!
+        </span>
         <button class="btn btn-primary" type="submit">Submit</button>
       </form>
     </div>
