--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -48,6 +48,18 @@
             }}
           </label>
         </div>
+        <div formArrayName="hobbies">
+          <h4>Your Hobbies</h4>
+          <button type="button" class="btn btn-default" (click)="onAddHobby()">
+            Add Hobby
+          </button>
+          <div
+            class="form-group"
+            *ngFor="let hobbyControl of getControls(); let i = index"
+          >
+            <input class="form-control" type="text" [formControlName]="i" />
+          </div>
+        </div>
         <span
           class="help-block"
           *ngIf="!signupForm.valid && signupForm.touched"
